--- a/css/pages.css
+++ b/css/pages.css
@@ -1,3 +1,7 @@
+body {
+    background-color:#f5f5f5;
+}
+
 .box {
     float: left;
     border-radius:10px;
@@ -6,6 +10,7 @@
     margin-top: 20px;
     margin-bottom: 35px;
     margin-right: 15px;
+    background-color:white;
 }
 
 .title {
@@ -14,7 +19,7 @@
     line-height: 35px;
     margin-top: -18px;
     margin-bottom: 15px;
-    margin-left: 15px;
+    margin-left: 30px;
     background-color: #4CAF50;
     color: white;
     font-size: 1.2em;
@@ -28,7 +33,7 @@
     height: 180px;
     border-radius:50%;
     margin-top: 20px;
-    margin-left: 20px;
+    margin-left: 30px;
     margin-bottom: 40px;
 }
 
