--- a/css/pages.css
+++ b/css/pages.css
@@ -32,8 +32,9 @@ body {
     width: 180px;
     height: 180px;
     border-radius:50%;
-    margin-top: 20px;
+    margin-top: 21px;
     margin-left: 30px;
+    margin-right: 5px;
     margin-bottom: 40px;
 }
 
