--- a/css/pages.css
+++ b/css/pages.css
@@ -26,7 +26,7 @@ body {
     margin-top: -18px;
     margin-bottom: 15px;
     margin-left: 30px;
-    background-color: #4CAF50;
+    background-color: #01B468;
     color: white;
     font-size: 1.2em;
     font-weight: bold;
