--- a/faceapp/css/main.css
+++ b/faceapp/css/main.css
@@ -153,20 +153,20 @@ body {
     border-radius: 10px;
     color: #750000; 
     font-weight:bold; 
-    font-size:1.7em;
-    width: 155px;
+    font-size:1.9em;
+    width: 170px;
 }
 
 .myProperty {
     position: absolute;
     text-align: center;
-    width: 110px;
-    height: 28px;
+    width: 120px;
+    height: 32px;
     /*border: 2px solid rgb(17, 122, 75);*/
     background-color: rgb(206, 248, 229);
     color: rgb(14, 97, 59);
     border-radius:12px;
-    font-size: 1.25em;
+    font-size: 1.45em;
     font-weight:bold;
 }
 
@@ -196,16 +196,16 @@ body {
 
 #recommendDiv {
     position: absolute;
-    width: 500px;
+    width: 570px;
     top: 90px;
-    right: 60px;
+    right: 40px;
     border: 1.5px solid #4CAF50;
     border-radius: 10px;
 }
 
 #recommendTitle {
-    width: 96px;
-    height: 35px;
+    width: 120px;
+    height: 40px;
     text-align: center;
     line-height: 35px;
     margin-top: 10px;
@@ -214,7 +214,7 @@ body {
     margin-right: auto;
     background-color: #4CAF50;
     color: white;
-    font-size: 1.2em;
+    font-size: 1.5em;
     font-weight: bold;
     border-radius: 5px;
 }
@@ -223,23 +223,30 @@ tr:nth-child(even) {
     background-color: #f2f2f2
 }
 
+/*
 td {
     font-size: 1.0em;
-}
+}*/
 
 th {
     background-color: #4CAF50;
     color: white;
-    font-size: 1.0em;
+    font-size: 1.2em;
 }
 
 .recommendImg {
     margin-top: 5px;
     margin-bottom: 3px;
     margin-left: 5px;
-    margin-right: 5px;
-    width:100px; 
-    height:100px;
+    margin-right: 25px;
+    width:80px; 
+    height:80px;
+}
+.rname {
+    font-size:1.5em;    
+}
+.rprice{
+    font-size:1.5em;
 }
 
 strong {
@@ -248,9 +255,9 @@ strong {
 }
 
 #recommendTable {
-    width:480px;
+    width:560px;
     text-align:center;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-right: 10px;
     margin-bottom: 10px;
 }
